--- a/css/gus.css
+++ b/css/gus.css
@@ -943,7 +943,7 @@ a.wowhead del {
    Parsing Rules
    ================================================================= */
 .sidebar-parsing-rules {
-  margin-top: 0.75rem;
+  margin-bottom: 1rem;
 }
 
 .sidebar-rules-heading {
